--- a/requirements.txt
+++ b/requirements.txt
@@ -4,36 +4,36 @@ anyio==4.6.2.post1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asttokens==2.0.5
+asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
 async-lru==2.0.4
 attrs==24.2.0
 babel==2.16.0
-backcall==0.2.0
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
 beautifulsoup4==4.12.3
 bleach==6.2.0
 botorch==0.10.0
-certifi==2024.7.4
+certifi @ file:///croot/certifi_1720453481653/work/certifi
 cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
-colorama==0.4.6
+colorama @ file:///croot/colorama_1672386526460/work
 colorlog==6.9.0
-comm==0.2.1
-cycler==0.11.0
+comm @ file:///croot/comm_1709322850197/work
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
 data==0.4
-debugpy==1.6.7
-decorator==5.1.1
+debugpy @ file:///croot/debugpy_1690905042057/work
+decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
 defusedxml==0.7.1
 docker-pycreds==0.4.0
-exceptiongroup==1.2.0
-executing==0.8.3
+exceptiongroup @ file:///croot/exceptiongroup_1706031385326/work
+executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
 fastjsonschema==2.20.0
 filelock==3.13.1
 flatten-dict==0.4.2
 fonttools==4.25.0
 fqdn==1.5.1
-fsspec==2023.9.2
+fsspec @ file:///croot/fsspec_1695734500336/work
 funcsigs==1.0.2
 future==1.0.0
 gitdb==4.0.11
@@ -48,14 +48,14 @@ httpx==0.27.2
 hydra-core==1.3.2
 hydra-joblib-launcher==1.2.0
 idna==3.7
-importlib-metadata==7.0.1
+importlib-metadata @ file:///croot/importlib_metadata-suite_1704813515092/work
 iniconfig==2.0.0
 ipykernel==6.29.4
-ipython==8.15.0
+ipython @ file:///croot/ipython_1694181358621/work
 ipywidgets==8.1.5
 isoduration==20.11.0
 jaxtyping==0.2.28
-jedi==0.18.1
+jedi @ file:///tmp/build/80754af9/jedi_1644297102865/work
 Jinja2==3.1.3
 joblib==1.4.2
 json5==0.9.28
@@ -63,27 +63,27 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter==1.1.1
-jupyter_client==8.6.0
 jupyter-console==6.6.3
-jupyter_core==5.7.2
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
+jupyter_client @ file:///croot/jupyter_client_1699455897726/work
+jupyter_core @ file:///croot/jupyter_core_1718818295206/work
 jupyter_server==2.14.2
 jupyter_server_terminals==0.5.3
 jupyterlab==4.2.6
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
-kiwisolver==1.4.4
+kiwisolver @ file:///croot/kiwisolver_1672387140495/work
 linear-operator==0.5.1
 llvmlite==0.43.0
 Mako==1.3.6
 MarkupSafe==2.1.5
-matplotlib==3.4.3
-matplotlib-inline==0.1.6
+matplotlib @ file:///tmp/build/80754af9/matplotlib-suite_1634667019719/work
+matplotlib-inline @ file:///opt/conda/conda-bld/matplotlib-inline_1662014470464/work
 mistune==3.0.2
-mkl-fft==1.3.8
-mkl-random==1.2.4
+mkl-fft @ file:///croot/mkl_fft_1695058164594/work
+mkl-random @ file:///croot/mkl_random_1695059800811/work
 mkl-service==2.4.0
 mpmath==1.3.0
 multipledispatch==1.0.0
@@ -92,7 +92,7 @@ namedlist==1.8
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
-nest-asyncio==1.6.0
+nest-asyncio @ file:///croot/nest-asyncio_1708532673751/work
 networkx==3.2.1
 notebook==7.2.2
 notebook_shim==0.2.4
@@ -115,39 +115,38 @@ opt-einsum==3.3.0
 optuna==4.1.0
 ordered-set==4.1.0
 overrides==7.7.0
-packaging==23.1
+packaging @ file:///croot/packaging_1693575174725/work
 pandas==2.2.2
 pandocfilters==1.5.1
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==10.0.1
-pip==23.3
-platformdirs==3.10.0
+parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow @ file:///croot/pillow_1696580024257/work
+platformdirs @ file:///croot/platformdirs_1692205439124/work
 plotly==5.24.1
 pluggy==1.5.0
 ply==3.11
 prometheus_client==0.21.0
-prompt-toolkit==3.0.43
+prompt-toolkit @ file:///croot/prompt-toolkit_1704404351921/work
 protobuf==4.25.3
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
+psutil @ file:///opt/conda/conda-bld/psutil_1656431268089/work
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
 pycparser==2.22
-Pygments==2.15.1
+Pygments @ file:///croot/pygments_1684279966437/work
 pynndescent==0.5.13
-pyparsing==3.0.9
+pyparsing @ file:///opt/conda/conda-bld/pyparsing_1661452539315/work
 PyQt5==5.15.10
-PyQt5-sip==12.13.0
+PyQt5-sip @ file:///croot/pyqt-split_1698769088074/work/pyqt_sip
 pyro-api==0.1.2
 pyro-ppl==1.9.0
 pytest==8.2.0
-python-dateutil==2.8.2
-python-dotenv==1.0.1
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+python-dotenv @ file:///home/conda/feedstock_root/build_artifacts/python-dotenv-split_1706018097647/work
 python-json-logger==2.0.7
 pytz==2024.1
 PyYAML==6.0.1
-pyzmq==25.1.2
+pyzmq @ file:///croot/pyzmq_1705605076900/work
 referencing==0.35.1
 requests==2.31.0
 rfc3339-validator==0.1.4
@@ -159,16 +158,15 @@ seaborn==0.13.2
 Send2Trash==1.8.3
 sentry-sdk==2.1.1
 setproctitle==1.3.3
-setuptools==68.0.0
 shutilwhich==1.1.0
-sip==6.7.12
-six==1.16.0
+sip @ file:///croot/sip_1698675935381/work
+six @ file:///tmp/build/80754af9/six_1644875935023/work
 smmap==5.0.1
 sniffio==1.3.1
-sobol-seq==0.2.0
+sobol-seq @ git+https://github.com/naught101/sobol_seq@8f819b68f64e1fea4999f5c64b73823a019fb244
 soupsieve==2.6
 SQLAlchemy==2.0.36
-stack-data==0.2.0
+stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
 sympy==1.12
 tempdir==0.7.1
 tenacity==9.0.0
@@ -176,18 +174,18 @@ tensordict==0.4.0
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
-tomli==2.0.1
+tomli @ file:///opt/conda/conda-bld/tomli_1657175507142/work
 torch==2.3.0+cu118
 torchaudio==2.3.0+cu118
 torchrl==0.4.0
 torchvision==0.18.0+cu118
-tornado==6.3.3
-tqdm==4.62.3
-traitlets==5.14.3
+tornado @ file:///croot/tornado_1696936946304/work
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1632160078689/work
+traitlets @ file:///croot/traitlets_1718227057033/work
 triton==2.3.0
 typeguard==2.13.3
 types-python-dateutil==2.9.0.20241003
-typing_extensions==4.11.0
+typing_extensions @ file:///croot/typing_extensions_1715268824938/work
 tzdata==2024.1
 umap-learn==0.5.7
 uri-template==1.3.0
@@ -197,7 +195,6 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
-wheel==0.41.2
 widgetsnbextension==4.0.13
 xgboost==2.1.1
-zipp==3.17.0
+zipp @ file:///croot/zipp_1704206909481/work
