--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,9 +1,9 @@
 defaults:
   - hydra: default  
-  - wandb_cfg@wandb: default
   - _self_
   - override hydra/hydra_logging: none  
   - override hydra/job_logging: none  
+  
   
 data: 
   name: ""
@@ -23,6 +23,7 @@ experiment:
   wandb: true
 
 wandb: 
+  project: PABBO
   name: ${experiment.expid}
   group: ${experiment.model}
   job_type: debug
